--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -2,8 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@+id/navigation_expense"
-    android:id="@+id/expense_navigation">
+    android:id="@+id/expense_navigation"
+    app:startDestination="@+id/navigation_expense">
 
     <fragment
         android:id="@+id/navigation_expense"
