--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_expense" />
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/navigation_log"
         android:icon="@drawable/ic_log"
-        android:title="@string/title_profile" />
+        android:title="@string/title_log" />
 </menu>
