add: Expense card with fake data

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="dark_lavender">#44497C</color>
     <color name="light_lavender">#A5A9BE</color>
+    <color name="lavender">#866EE1</color>
 </resources>
