--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -18,14 +18,14 @@
 
     <ImageView
         android:id="@+id/add_expense"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="4dp"
         android:baselineAlignBottom="true"
         android:src="@drawable/ic_add"
-        app:layout_constraintBaseline_toBottomOf="@id/avatar"
-        app:layout_constraintEnd_toStartOf="@+id/notification" />
+        app:layout_constraintBottom_toBottomOf="@+id/notification"
+        app:layout_constraintEnd_toStartOf="@+id/notification"
+        app:layout_constraintTop_toTopOf="@+id/notification" />
 
     <ImageView
         android:id="@+id/notification"
