--- a/app/src/main/res/layout/activity_expenditure.xml
+++ b/app/src/main/res/layout/activity_expenditure.xml
@@ -12,10 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
         android:fitsSystemWindows="true"
-        app:layout_constraintStart_toStartOf="parent"
+        android:theme="@style/Theme.Oweme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:theme="@style/Theme.Oweme.AppBarOverlay">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
@@ -39,27 +39,24 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/expenditure_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="20dp"
-        android:padding="@dimen/big_padding"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar"
         tools:listitem="@layout/expenditure_item" />
-
-<!--    <include layout="@layout/content_scrolling" />-->
+    <!--    <include layout="@layout/content_scrolling" />-->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_anchor="@id/app_bar"
         android:layout_margin="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_anchor="@id/app_bar"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
