--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,20 +9,34 @@
         android:id="@+id/navigation_expenditure_activity"
         android:name="com.dranoer.oweme.expenditure.ExpenditureActivity"
         android:label="@string/title_expenditure_activity"
-        tools:layout="@layout/activity_expenditure" >
+        tools:layout="@layout/activity_expenditure">
         <argument
             android:name="expense_title"
-            app:argType="string"/>
+            app:argType="string" />
     </activity>
+
+    <activity
+        android:id="@+id/navigation_setting_activity"
+        android:name="com.dranoer.oweme.SettingsActivity"
+        android:label="@string/title_setting_activity"
+        tools:layout="@layout/activity_setting" />
 
     <fragment
         android:id="@+id/navigation_expense"
         android:name="com.dranoer.oweme.expenses.ExpenseFragment"
         android:label="@string/title_expense"
-        tools:layout="@layout/fragment_expense" >
+        tools:layout="@layout/fragment_expense">
         <action
             android:id="@+id/action_add_expense_to_expenditure"
             app:destination="@id/navigation_expenditure_activity"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+        <action
+            android:id="@+id/action_expense_to_setting"
+            app:destination="@+id/navigation_setting_activity"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
@@ -34,6 +48,12 @@
         android:name="com.dranoer.oweme.log.LogFragment"
         android:label="@string/title_log"
         tools:layout="@layout/fragment_log" />
+
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.dranoer.oweme.profile.ProfileFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_profile" />
 
     <fragment
         android:id="@+id/navigation_expenditure"
