--- a/app/src/main/res/layout/fragment_log.xml
+++ b/app/src/main/res/layout/fragment_log.xml
@@ -6,16 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".log.LogFragment">
 
-    <TextView
-        android:id="@+id/text_profile"
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/not_yet_implemented"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Log"
-        android:textAlignment="center"
-        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
